--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 				<h3>CONFIGURAÇÕES</h3>
 				<br>
 				<div style="overflow-y: auto; height: calc(100% - 140px); padding-right: 10px">
-
+					<div class="form-group  col-xs-12 col-md-12" style="text-align: left;">
+						<button style="background-color: #B93939; color: #fff; border: 1px solid #B93939; margin: 1px;border-radius: 40px;padding: 1px 10px;cursor: pointer;font-weight: bold; font-size: 12px" onclick="adicionarCorFundo()" title="Na tela de preview de impressão, a folha deve ser ocupada pelo fundo vermelho. Lembre-se de deixar sem margens!">Ativar / Desativar Cor de Fundo para ajuste de escala</button>
+					</div>
 					<div class="form-group  col-xs-12 col-md-12" style="text-align: left;">
 						<label style="font-size: 11px">Modelo de Etiqueta</label>
 						<select class="form-control" id="select_modelo" onchange="trocarModelo()">
